--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -29,6 +29,7 @@ header{
     background-color: var(--font);
     color: var(--background);
     border-bottom: var(--border-accent);
+    min-height: 100px;
 }
 
 h1 {
@@ -88,6 +89,7 @@ nav a:hover {
 main{
     max-width: 500px;
     margin: 0 auto;
+    min-height: 4700px;
 }
   
 h2, h3, p{
